home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
      annotations:
        k8s.v1.cni.cncf.io/networks: lan-network
    spec:
      imagePullSecrets:
        - name: docker-hub-secret
      containers:
        - name: home-assistant
          image: isenne/home-assistant:latest
          imagePullPolicy: "Always"
          volumeMounts:
            - name: home-assistant-storage
              mountPath: /config/.storage
            - name: tz-volume
              mountPath: /etc/localtime
              readOnly: true
          ports:
            - containerPort: 8123
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1"
      volumes:
        - name: tz-volume
          hostPath:
            path: /etc/localtime
        - name: home-assistant-storage
          persistentVolumeClaim:
            claimName: home-assistant-lh-pvc
