home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-service
spec:
  selector:
    app: home-assistant
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 8123
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-nodeport
spec:
  type: NodePort
  selector:
    app: home-assistant
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 30123
