home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-ingress
spec:
  ingressClassName: "caddy"
  rules:
    - host: testha.punter3.nl
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: home-assistant-service
                port:
                  number: 8123
